# libcomapp

./: AUTHORS  Makefile.am  comapp.pc.in  configure.ac
debian/: changelog  control  copyright  gbp.conf  libcomapp-dev.install.in  rules
doxygen/: Doxyfile  generate
src/: Makefile.am  comapp_common.c  comapp_common.h  comapp_details.c  comapp_details.h  comapp_i18n.h  comapp_opensave.c  comapp_opensave.h  comapp_recent.c  comapp_recent.h  comapp_recent_private.h  comapp_sendvia.c  comapp_sendvia.h  comapp_system.c  comapp_system.h
test/: Makefile.am  check_libcomapp.h  check_libcomapp_master.c  check_main.c  check_recent.c
